[package]
name = "bitcredit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
bitcoin = { version = "0.30.0", features = ["rand", "rand-std"] }
reqwest = { version = "0.11.17", features = ["json", "serde_json"] }
moksha-core = { git  = "https://github.com/BitcoinCredit/moksha" }
moksha-mint = { git  = "https://github.com/BitcoinCredit/moksha" }
moksha-wallet = { git  = "https://github.com/BitcoinCredit/moksha" }
moksha-cli = { git  = "hhttps://github.com/BitcoinCredit/moksha" }
#moksha-core = { version = "0.2.1"}
#moksha-mint = { version = "0.2.1"}
#moksha-wallet = { version = "0.2.1"}
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
url = "2.5.0"
envy = "0.4.2"
dotenv = "0.15.0"