[package]
name = "bitcredit"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
bitcoin = { version = "0.32.1", features = ["rand", "rand-std"] }
reqwest = { version = "0.11.17", features = ["json", "serde_json"] }
moksha-core = { git  = "https://github.com/BitcreditProtocol/moksha" }
moksha-mint = { git  = "https://github.com/BitcreditProtocol/moksha" }
moksha-wallet = { git  = "https://github.com/BitcreditProtocol/moksha" }
moksha-cli = { git  = "https://github.com/BitcreditProtocol/moksha" }
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
url = "2.5.0"
envy = "0.4.2"
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"
sqlx-cli = "0.7.4"
